@@ -124,3 +124,8 @@ CONTENT_FIELDSET_PUBLISHING=Publishing Details
 CONTENT_ATTRIBS_SHOW_UNAUTH_LINKS_DESC=If set to Yes, links to registered content will be shown even if you are not logged in. You will need to log in to access the full item.
 CONTENT_ATTRIBS_SHOW_UNAUTH_LINKS_LABEL=Show Unauthorised Links
 
+CONTENT_SELECT_AN_ARTICLE=Select an Article
+CONTENT_CHANGE_ARTICLE=Change article
+CONTENT_CHANGE_ARTICLE_BUTTON=Change
+
+
